charts/mockoidc/examples/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mockoidc-system
  labels:
    name: mockoidc-system
    app: mockoidc
    environment: production
